# LimeSuite

./: CMakeLists.txt
QuickTest/: CMakeLists.txt  LimeSDRTest.cpp  LimeSDRTest.h  TestGUI.cpp
cmake/Modules/: Findlibusb-1.0.cmake
debian/: control  limesdr-quicktest.install
